@@ -1,0 +1,6 @@
+BEGIN:VNOTE
+VERSION:1.1
+BODY:Some text is here.
+DCREATED:20051030T111735Z
+LAST-MODIFIED:20051030T112041Z
+END:VNOTE
