@@ -1,0 +1,8 @@
+BEGIN:VNOTE
+VERSION:1.1
+DCREATED:20060927T202756Z
+LAST-MODIFIED:20061004T180306Z
+BODY;ENCODING=QUOTED-PRINTABLE;CHARSET=UTF-8:=
+Teolog=0D=0ADager=20og=20blir=20ute=20til=20i=20kassa=20tar=20v=C3=A5r=20=
+teolog=20dager=20og=20=20
+END:VNOTE
